# microservices-basics

auth-service/: Cargo.toml
auth-service/src/: error.rs  main.rs  startup.rs
auth-service/src/api/: mod.rs
auth-service/src/context/: mod.rs
auth-service/src/server/: mod.rs
