[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
tokio = { version = "1.13.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.30"
validator = "0.16.0"
anyhow = "1.0.50"
tower-layer = "0.3.1"
hyper = "0.14.13"
pin-project-lite = "0.2.7"
log = "0.4.14"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "json", "chrono"] }
tower-http = {version = "0.4.0", features = ["full"]}
env_logger = "0"
dotenvy = "0"